--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
+html,
+body {
+  height: 100%; /* Make sure the body and html elements fill the full height */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  background-color: #fff1f3;
+}
+
 .app-container {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   width: 100%;
-  background-color: #fff1f3;
   padding: 20px;
   font-family: "Nunito", sans-serif;
 }
